--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Gothic+A1&family=Montserrat&family=Nanum+Gothic:wght@700&family=Noto+Sans+KR:wght@400;500;700;900&family=Roboto&family=Urbanist&display=swap"
       rel="stylesheet">
   
-    <title>Lab-1</title>
+    <title>계산기 만들기 프로젝트</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
