--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </div>
           <div class="cal-space">
             <button>.</button>
-            <button>0</button>
+            <button data-btn-Number>0</button>
             <button data-btn equal data-btn-operation class="space-2">=</button>
           </div>
           
