--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <button data-btn-plus data-btn-operation>+</button>
           </div>
           <div class="cal-space">
-            <button>.</button>
+            <button data-btn-Number>.</button>
             <button data-btn-Number>0</button>
             <button data-btn equal data-btn-operation class="space-2">=</button>
           </div>
