--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Gothic+A1&family=Montserrat&family=Nanum+Gothic:wght@700&family=Noto+Sans+KR:wght@400;500;700;900&family=Roboto&family=Urbanist&display=swap"
       rel="stylesheet">
   
-    <title>계산기 만들기 프로젝트</title>
+    <title>계산기앱 만들기 프로젝트 1</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,43 +19,41 @@
         <div class="cal">
           <div class="cal-header">
             <div data-previous-preview class="cal-previous-preview"></div>
-            <div data-previous-current class="cal-current-preview"></div>
+            <div data-current-preview class="cal-current-preview"></div>
           </div>
-        
-        <div class="cal-body">
-          <div class="cal-space">
-            <button data-btn-reset class="space-2">AC</button>
-            <button data-btn-delete>DEL</button>
-            <button data-btn-divide data-btn-operation>÷</button>
+          <div class="cal-body">
+            <div class="cal-space">
+              <button data-btn-reset class="space-2">AC</button>
+              <button data-btn-delete>DEL</button>
+              <button data-btn-divide data-btn-operation>÷</button>
+            </div>
+            <div class="cal-space">
+              <button data-btn-number>1</button>
+              <button data-btn-number>2</button>
+              <button data-btn-number>3</button>
+              <button data-btn-multiply data-btn-operation>*</button>
+            </div>
+            <div class="cal-space">
+              <button data-btn-number>4</button>
+              <button data-btn-number>5</button>
+              <button data-btn-number>6</button>
+              <button data-btn-minus data-btn-operation>-</button>
+            </div>
+            <div class="cal-space">
+              <button data-btn-number>7</button>
+              <button data-btn-number>8</button>
+              <button data-btn-number>9</button>
+              <button data-btn-plus data-btn-operation>+</button>
+            </div>
+            <div class="cal-space">
+              <button data-btn-number>.</button>
+              <button data-btn-number>0</button>
+              <button data-btn-eqaul data-btn-operation class="space-2">=</button>
+            </div>
           </div>
-          <div class="cal-space">
-            <button data-btn-Number>1</button>
-            <button data-btn-Number>2</button>
-            <button data-btn-Number>3</button>
-            <button data-btn-multiply data-btn-operation>*</button>
-          </div>
-          <div class="cal-space">
-            <button data-btn-Number>4</button>
-            <button data-btn-Number>5</button>
-            <button data-btn-Number>6</button>
-            <button data-btn-minus data-btn-operation>-</button>
-          </div>
-          <div class="cal-space">
-            <button data-btn-Number>7</button>
-            <button data-btn-Number>8</button>
-            <button data-btn-Number>9</button>
-            <button data-btn-plus data-btn-operation>+</button>
-          </div>
-          <div class="cal-space">
-            <button data-btn-Number>.</button>
-            <button data-btn-Number>0</button>
-            <button data-btn equal data-btn-operation class="space-2">=</button>
-          </div>
-          
         </div>
       </div>
     </div>
-  </div>
     <script src="script.js"></script>
 </body>
 </html>
